Fix Modal max size on mobile

--- a/src/client/components/modals/Modal/Modal.css
+++ b/src/client/components/modals/Modal/Modal.css
@@ -34,8 +34,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100vh;
+  right: 0;
+  bottom: 0;
 
   display: flex;
   justify-content: center;
@@ -125,7 +125,7 @@
 
 /*  */
 
-@media (max-width: 768px), (max-height: 700px) {
+@media (max-width: 768px), (max-height: 600px) {
   .modal-window {
     width: 100%;
     height: 100%;
